<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <artifactId>tinkar</artifactId>
    <version>1.0.0</version>

    <parent>
        <groupId>org.hl7.tinkar</groupId>
        <artifactId>tinkar-parent</artifactId>
        <version>1.0.0</version>
    </parent>

    <packaging>pom</packaging>
    <name>TINKAR</name>

    <organization>
        <name>HL7</name>
        <url>https://www.hl7.org</url>
    </organization>
    <licenses>
        <license>
            <name>APACHE LICENSE, VERSION 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <properties>
        <auto-service.version>1.0.1</auto-service.version>
        <activej.version>4.3</activej.version>
        <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
        <caffeine.version>3.1.1</caffeine.version>
        <eclipse-collections-api.version>11.1.0</eclipse-collections-api.version>
        <jetty-slf4j-impl.version>11.0.7</jetty-slf4j-impl.version>
        <jgrapht.version>1.5.0</jgrapht.version>
        <junit.version>5.6.3</junit.version>
        <h2-mvstore.version>1.4.200</h2-mvstore.version>
        <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
        <jheaps.version>0.14</jheaps.version>
        <lucene.version>8.9.0</lucene.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
        <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
        <maven-failsafe-plugin.version>3.0.0-M9</maven-failsafe-plugin.version>
        <org.reactivestreams.version>1.0.3</org.reactivestreams.version>
        <record-builder-core.version>34</record-builder-core.version>
        <roaringbitmap.version>0.9.31</roaringbitmap.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
        <maven.resources.plugin.version>3.3.0</maven.resources.plugin.version>
        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
        <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
        <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
        <maven.install.plugin.version>3.0.1</maven.install.plugin.version>
        <maven.deploy.plugin.version>3.0.0</maven.deploy.plugin.version>
        <maven-site-plugin.version>3.12.0</maven-site-plugin.version>
        <maven-project-info-reports-plugin.version>3.4.0</maven-project-info-reports-plugin.version>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <slf4j.version>2.0.0-alpha6</slf4j.version>
        <testng.version>7.4.0</testng.version>
        <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>
        <protobuf-java.version>3.21.3</protobuf-java.version>
        <protobuf.version>1.5.0</protobuf.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-slf4j-impl</artifactId>
                <version>${jetty-slf4j-impl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-slf4j-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hl7.tinkar</groupId>
            <artifactId>auto-service</artifactId>
            <version>${auto-service.version}</version>
            <scope>provided</scope>
        </dependency>
        
    </dependencies>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.mycila</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <configuration>
                        <header>${basedir}/../../etc/license.txt</header>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <fork>true</fork>
                        <compilerArgs>
                            --enable-preview
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <annotationProcessorPath>
                                <groupId>io.soabase.record-builder</groupId>
                                <artifactId>record-builder-processor</artifactId>
                                <version>${record-builder-core.version}</version>
                            </annotationProcessorPath>
                            <annotationProcessorPath>
                                <groupId>com.google.auto.service</groupId>
                                <artifactId>auto-service</artifactId>
                                <version>${auto-service.version}</version>
                            </annotationProcessorPath>
                        </annotationProcessorPaths>
                        <annotationProcessors>
                            <annotationProcessor>io.soabase.recordbuilder.processor.RecordBuilderProcessor
                            </annotationProcessor>
                            <annotationProcessor>com.google.auto.service.processor.AutoServiceProcessor
                            </annotationProcessor>
                        </annotationProcessors>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>${maven-site-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <reportsDirectories>
                        <trimStackTrace>false</trimStackTrace>
                        <reportsDirectory>${basedir}/target/failsafe-reports</reportsDirectory>
                    </reportsDirectories>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <modules>
        <module>collection</module>
        <module>common</module>
        <module>component</module>
        <module>coordinate</module>
        <module>entity</module>
        <module>dto</module>
        <module>terms</module>
        <module>provider</module>
        <module>integration</module>
        <module>code-coverage-aggregator</module>
    </modules>
</project>
